// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders StartPanel for board of experts unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    >
      <div
        class="memori--board-of-experts"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            boardOfExperts
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <span
              aria-label="boardOfExperts"
            >
              <svg
                class="lucide lucide-users"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="9"
                  cy="7"
                  r="4"
                />
                <path
                  d="M22 21v-2a4 4 0 0 0-3-3.87"
                />
                <path
                  d="M16 3.13a4 4 0 0 1 0 7.75"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel on instruct unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.instructButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageInstructExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completion provider down unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori-tooltip memori-tooltip--align-right memori--completion-provider-status--tooltip"
      >
        <div
          class="memori-tooltip--content"
        >
          <div>
            <p>
              completionProviderMajorOutage
            </p>
            <p>
              <a
                href="https://status.openai.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                completionProviderCheckStatusPage
              </a>
            </p>
          </div>
        </div>
        <div
          class="memori-tooltip--trigger"
        >
          <svg
            class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with completions enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought but unlogged unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-brain"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 5a3 3 0 1 0-5.997.125 4 4 0 0 0-2.526 5.77 4 4 0 0 0 .556 6.588A4 4 0 1 0 12 18Z"
              />
              <path
                d="M12 5a3 3 0 1 1 5.997.125 4 4 0 0 1 2.526 5.77 4 4 0 0 1-.556 6.588A4 4 0 1 1 12 18Z"
              />
              <path
                d="M15 13a4.5 4.5 0 0 1-3-4 4.5 4.5 0 0 1-3 4"
              />
              <path
                d="M17.599 6.5a3 3 0 0 0 .399-1.375"
              />
              <path
                d="M6.003 5.125A3 3 0 0 0 6.401 6.5"
              />
              <path
                d="M3.477 10.896a4 4 0 0 1 .585-.396"
              />
              <path
                d="M19.938 10.5a4 4 0 0 1 .585.396"
              />
              <path
                d="M6 18a4 4 0 0 1-1.967-.516"
              />
              <path
                d="M19.967 17.484A4 4 0 0 1 18 18"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThought
        </h2>
        <p>
          deepThoughtPreDisclaimerUnlogged
        </p>
        <p>
          <button
            class="memori-button memori-button--outline memori-button--md"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__content"
            >
              login.login
            </span>
          </button>
        </p>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled but without permission flag unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndUsername
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-brain"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 5a3 3 0 1 0-5.997.125 4 4 0 0 0-2.526 5.77 4 4 0 0 0 .556 6.588A4 4 0 1 0 12 18Z"
              />
              <path
                d="M12 5a3 3 0 1 1 5.997.125 4 4 0 0 1 2.526 5.77 4 4 0 0 1-.556 6.588A4 4 0 1 1 12 18Z"
              />
              <path
                d="M15 13a4.5 4.5 0 0 1-3-4 4.5 4.5 0 0 1-3 4"
              />
              <path
                d="M17.599 6.5a3 3 0 0 0 .399-1.375"
              />
              <path
                d="M6.003 5.125A3 3 0 0 0 6.401 6.5"
              />
              <path
                d="M3.477 10.896a4 4 0 0 1 .585-.396"
              />
              <path
                d="M19.938 10.5a4 4 0 0 1 .585.396"
              />
              <path
                d="M6 18a4 4 0 0 1-1.967-.516"
              />
              <path
                d="M19.967 17.484A4 4 0 0 1 18 18"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThought
        </h2>
        <p>
          deepThoughtPreDisclaimerNotAllowed
        </p>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with deep thought enabled unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndUsername
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
      <div
        class="memori--deep-thought-disclaimer"
      >
        <div
          class="memori-tooltip memori-tooltip--align-left"
        >
          <div
            class="memori-tooltip--content"
          >
            deepThoughtHelper
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-brain"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 5a3 3 0 1 0-5.997.125 4 4 0 0 0-2.526 5.77 4 4 0 0 0 .556 6.588A4 4 0 1 0 12 18Z"
              />
              <path
                d="M12 5a3 3 0 1 1 5.997.125 4 4 0 0 1 2.526 5.77 4 4 0 0 1-.556 6.588A4 4 0 1 1 12 18Z"
              />
              <path
                d="M15 13a4.5 4.5 0 0 1-3-4 4.5 4.5 0 0 1-3 4"
              />
              <path
                d="M17.599 6.5a3 3 0 0 0 .399-1.375"
              />
              <path
                d="M6.003 5.125A3 3 0 0 0 6.401 6.5"
              />
              <path
                d="M3.477 10.896a4 4 0 0 1 .585-.396"
              />
              <path
                d="M19.938 10.5a4 4 0 0 1 .585.396"
              />
              <path
                d="M6 18a4 4 0 0 1-1.967-.516"
              />
              <path
                d="M19.967 17.484A4 4 0 0 1 18 18"
              />
            </svg>
          </div>
        </div>
        <h2>
          deepThoughtDisclaimerTitle
        </h2>
        <p
          class="memori--deep-thought-disclaimer-text"
        >
          deepThoughtDisclaimer
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with existing sessionunchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.resumeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with integrationConfig unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with login required unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--needsLogin"
    >
      <p>
        write_and_speak.requirePositionHelp
      </p>
      <button
        class="memori-button memori-button--primary memori-button--md"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__icon"
        >
          <svg
            class="lucide lucide-user"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </span>
        <span
          class="memori-button__content"
        >
          login.login
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with multilangual unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--description"
    >
      <p>
        <div
          class="memori-expandable memori--description-text"
        >
          <div
            class="memori-expandable__inner"
            style="max-height: 9999px;"
          >
            Lorem ipsum.
          </div>
        </div>
      </p>
      <div
        class="memori--language-chooser"
      >
        <label
          for="user-lang-pref"
          id="user-lang-pref-label"
        >
          write_and_speak.iWantToTalkToIn
        </label>
        <div
          class="memori-select memori-select--language-chooser"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="memori-select__trigger"
            id="base-ui-:r0:"
            role="combobox"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-select__value"
              data-placeholder="write_and_speak.iWantToTalkToIn"
            >
              <span>
                EN
              </span>
            </span>
            <span
              aria-hidden="true"
              class="memori-select__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </span>
          </button>
          <input
            aria-hidden="true"
            name="user-lang-pref"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: absolute;"
            tabindex="-1"
            value="en"
          />
        </div>
      </div>
      <div
        class="memori--start-privacy-explanation-container"
      >
        <p
          class="memori--start-privacy-explanation"
        >
          write_and_speak.pagePrivacyExplanation
        </p>
        <div
          class="memori-tooltip memori-tooltip--align-right"
        >
          <div
            class="memori-tooltip--content"
          >
            <div
              class="memori--privacy-tooltip-content"
            >
              <p>
                 
                write_and_speak.pagePrivacyExplanationList.allConversations
              </p>
              <ul
                class="memori--privacy-tooltip-content-list"
              >
                <li>
                  write_and_speak.pagePrivacyExplanationList.contentAndIpAddress
                </li>
              </ul>
              <p>
                write_and_speak.pagePrivacyExplanationList.authorUsesInfo
              </p>
              <a
                href="https://memori.ai/en/privacy-policy"
                rel="noopener noreferrer"
                target="_blank"
              >
                privacyPolicy
              </a>
            </div>
          </div>
          <div
            class="memori-tooltip--trigger"
          >
            <svg
              class="lucide lucide-circle-help memori--start-privacy-explanation-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="memori-button memori-button--primary memori-button--md memori--start-button"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__content"
        >
          write_and_speak.tryMeButton
        </span>
      </button>
      <div
        class="memori--completion-provider-status--loading"
      >
        <div
          class="memori-spin memori-spin--spinning"
        >
          <div
            aria-label="Loading"
            aria-live="polite"
            class="memori-spin__overlay"
            role="status"
          >
            <div
              class="memori-spin__container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle memori-spin__icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="memori--start-description"
      >
        write_and_speak.pageTryMeExplanation
      </p>
    </div>
  </div>
</div>
`;

exports[`renders StartPanel with position required unchanged 1`] = `
<div>
  <div
    class="memori--start-panel"
  >
    <div
      class="memori--cover"
    />
    <picture
      class="memori--avatar"
    >
      <source
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
      <img
        alt="Memori"
        src="https://aisuru.com/images/aisuru/square_logo.png"
      />
    </picture>
    <h2
      class="memori--title"
    >
      Memori
    </h2>
    <div
      class="memori--needsPosition"
    >
      <p>
        write_and_speak.requirePositionHelp
      </p>
      <button
        class="memori-button memori-button--primary memori-button--md"
        tabindex="0"
        type="button"
      >
        <span
          class="memori-button__icon"
        >
          <svg
            class="lucide lucide-map-pin"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
            />
            <circle
              cx="12"
              cy="10"
              r="3"
            />
          </svg>
        </span>
        <span
          class="memori-button__content"
        >
          widget.position
        </span>
      </button>
    </div>
  </div>
</div>
`;
